--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titel</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Johanna Kratzer</title>
   </head>
   <body>
     <h1 style="background: pink;">
