--- a/index.html
+++ b/index.html
@@ -3,38 +3,48 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Johanna Kratzer</title>
+
 </head>
 <body>
 
+<div class="container mx-auto bg-purple-300 p-5">
+    <nav class="flex-row md:justify-between">
+        <div class="flex flex-row justify-between">
+            <a href="#">Logo</a>
 
-<div class="container-xl">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <img class="hero_img-nav center-block" src="/media/images/common/bf.svg">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link"
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link"
-                    </a>
-                </li>
-            </ul>
+            <p id="hamburgerbtn" class="md:hidden bg-purple-800">
+                menu
+            </p>
         </div>
+
+        <ul class="hidden md:flex md:flex-row" id="mobileMenu">
+            <li class="pr-5"><a> Services </a></li>
+            <li class="pr-5"><a>Porfolio</a></li>
+            <li class="pr-5"><a>About</a></li>
+            <li><a>Contact</a></li>
+        </ul>
     </nav>
 </div>
 
-<h1 style="background: pink;">
-    Indexseite - Test
-</h1>
+
+<style>
+    .active {
+        display: block;
+    }
+</style>
+
+<script>
+    let hamburger = document.getElementById('hamburgerbtn');
+
+    let mobileMenu = document.getElementById('mobileMenu');
+
+    hamburger.addEventListener('click', function () {
+        mobileMenu.classList.toggle('active');
+    });
+</script>
+
 </body>
 </html>
